# MCP

./: .env.example  .gitignore  README.md  pyproject.toml
src/mcp_server/: config.py  main.py
src/mcp_server/tools/: jira.py  linear.py  notion.py  slack.py
